--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,74 @@
+:root {
+  --cap-white: #e0e1f3;
+  --cap-black: #0e0e10;
+  --cap-orange: #ff6e1a;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap");
+
+/** Tag A B C D E F G H I J K L M N O P Q R S T U V W X Y Z*/
+
+body {
+  /* font-family: "Poppins", sans-serif !important; */
+  background-color: var(--cap-black);
+}
+
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ol,
+li,
+ul,
+label {
+  /* font-family: "Poppins", sans-serif !important; */
+  color: var(--cap-white);
+}
+
 /** Classes A B C D E F G H I J K L M N O P Q R S T U V W X Y Z*/
+
+.btn-primary {
+  --bs-btn-color: var(--cap-black);
+  --bs-btn-bg: var(--cap-orange);
+  --bs-btn-border-color: var(--cap-orange);
+  --bs-btn-hover-color: var(--cap-black);
+  --bs-btn-hover-bg: #ff7f36;
+  --bs-btn-hover-border-color: #ff7b2e;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: var(--cap-black);
+  --bs-btn-active-bg: #ff7b2e;
+  --bs-btn-active-border-color: #ff7b2e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: var(--cap-black);
+  --bs-btn-disabled-bg: var(--cap-orange);
+  --bs-btn-disabled-border-color: var(--cap-orange);
+}
+
+.btn-primary:focus {
+  box-shadow: 0 0 0 0.25rem #ff7f3640;
+}
+
+.form-control {
+  color: var(--cap-white);
+  background-color: #1d1d21;
+  border-color: #232326;
+}
+
+.form-control:focus {
+  color: var(--cap-white);
+  background-color: #1d1d21;
+  border-color: #35353d;
+  box-shadow: 0 0 0 0.25rem #ff7f3640;
+}
+
+.images-cards {
+  width: 100%;
+  height: auto;
+}
 
 .main-box {
   width: 100%;
