--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,30 @@ label {
   box-shadow: 0 0 0 0.25rem #ff7f3640;
 }
 
+.card {
+  overflow: hidden;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: stretch; */
+  /* height: 100%; */
+
+  color: var(--cap-white);
+  /* background-color: #1d1d21; */
+  background: #1d1d21;
+  background: linear-gradient(153deg, #35353d 0%, #1d1d21 70%);
+  border-color: #232326;
+  border-width: 2px;
+  border-radius: 8px;
+
+  box-shadow: 0px 10px 20px #35353d5d;
+
+  .card-footer span,
+  #id span {
+    color: #474752;
+    font-size: 0.8rem;
+  }
+}
+
 .form-control {
   color: var(--cap-white);
   background-color: #1d1d21;
@@ -68,6 +92,10 @@ label {
 .images-cards {
   width: 100%;
   height: auto;
+
+  object-fit: cover;
+
+  border-radius: 6px;
 }
 
 .main-box {
