--- a/views/postcapybara.ejs
+++ b/views/postcapybara.ejs
@@ -27,10 +27,30 @@
 <div class="my-5">
   <div class="row gy-3 gx-3">
     <% data.forEach(image => { %>
+    <div class="col-4">
+      <div class="card">
+        <img src="data: <%= image.mimetype %>;base64, <%=
+        image.blob.toString("base64") %>" class="images-cards">
 
-    <div class="col-4 text-center">
-      <img src="data: <%= image.mimetype %>;base64, <%=
-      image.blob.toString("base64") %>" class="images-cards">
+        <div class="card-body mt-auto mb-2">
+          <div class="d-flex" id="id">
+            <span class="ms-auto me-1"><%= image._id %></span>
+          </div>
+
+          <div>
+            <h5 class="card-title">Tags</h5>
+            <p class="card-text">
+              <%= image.tags.toString().replaceAll(",",", ") %>
+            </p>
+          </div>
+        </div>
+
+        <div class="card-footer">
+          <span>CreatedAt: <%= image.createdAt.toDateString() %></span>
+          <br />
+          <span>UpdatedAt: <%= image.updatedAt.toDateString() %></span>
+        </div>
+      </div>
     </div>
 
     <% }) %>
