--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,23 +57,39 @@ label {
   /* display: flex; */
   /* flex-direction: column; */
   /* align-items: stretch; */
-  /* height: 100%; */
+  height: 100%;
 
   color: var(--cap-white);
   /* background-color: #1d1d21; */
   background: #1d1d21;
   background: linear-gradient(153deg, #35353d 0%, #1d1d21 70%);
+  background-size: 200%;
+  background-position-x: 100%;
+
   border-color: #232326;
   border-width: 2px;
   border-radius: 8px;
 
   box-shadow: 0px 10px 20px #35353d5d;
 
-  .card-footer span,
-  #id span {
-    color: #474752;
-    font-size: 0.8rem;
-  }
+  transition: all 400ms ease-in-out;
+}
+
+.card:hover {
+  background-position-x: 0%;
+  transform: scale(1.01);
+}
+
+.card-footer span,
+#id span {
+  color: #474752;
+  font-size: 0.8rem;
+}
+
+.card-image {
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+  border-radius: 6px;
 }
 
 .form-control {
@@ -90,12 +106,10 @@ label {
 }
 
 .images-cards {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  min-height: 100%;
 
   object-fit: cover;
-
-  border-radius: 6px;
 }
 
 .main-box {
