--- a/views/postcapybara.ejs
+++ b/views/postcapybara.ejs
@@ -27,7 +27,7 @@
 <div class="my-5">
   <div class="row gy-3 gx-3">
     <% data.forEach(image => { %>
-    <div class="col-4">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
       <div class="card">
         <div class="card-image">
           <img src="data: <%= image.mimetype %>;base64, <%=
