--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,8 @@ label {
 .card:hover {
   background-position-x: 0%;
   transform: scale(1.01);
+
+  box-shadow: 0px 15px 25px hsla(22, 100%, 60%, 0.15);
 }
 
 .card-footer span,
