--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -25,7 +25,7 @@
   <body>
     <!--TODO header -->
 
-    <main class="main-box"><%- body %></main>
+    <main><%- body %></main>
 
     <!--TODO footer -->
   </body>
