--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
 </section>
 
 <section class="section-padding my-5">
-  <h2>SAMPLES</h2>
+  <h2>SAMPLE</h2>
   <div>
     <div class="row gy-3 gx-3">
       <% data.forEach(image => { %>
