--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@ label {
 
 /** Classes A B C D E F G H I J K L M N O P Q R S T U V W X Y Z*/
 
+/* TODO Add soft shadow to primary button */
 .btn-primary {
   --bs-btn-color: var(--cap-black);
   --bs-btn-bg: var(--cap-orange);
@@ -49,6 +50,28 @@ label {
 }
 
 .btn-primary:focus {
+  box-shadow: 0 0 0 0.25rem #ff7f3640;
+}
+
+/* TODO change secondary button style */
+.btn-outline-secondary {
+  --bs-btn-color: #6c757d;
+  --bs-btn-border-color: #6c757d;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6c757d;
+  --bs-btn-hover-border-color: #6c757d;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6c757d;
+  --bs-btn-active-border-color: #6c757d;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #6c757d;
+  --bs-gradient: none;
+}
+
+.btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem #ff7f3640;
 }
 
