--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -23,10 +23,13 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <!--TODO header -->
+    <!--* Header -->
+    <%- include("../partials/header.ejs") %>
 
+    <!--* Main -->
     <main><%- body %></main>
 
+    <!--* Footer -->
     <!--TODO footer -->
   </body>
 </html>
