feat(homepage): update `post capybara` button to `gallery` in production

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,12 +11,13 @@
       <a role="button" class="btn btn-primary" href="/capybara">
         GIVE ME ONE
       </a>
+
       <a
         role="button"
         class="btn btn-outline-secondary"
-        href="/capybara/post-capybara"
+        href="<%= secondaryButtonHref %>"
       >
-        POST A CAPYBARA
+        <%= secondaryButtonTitle %>
       </a>
     </div>
   </div>
